syntax = "proto3";

package auth.v1;

option go_package = "github.com/sukryu/IV-auth-services/internal/proto/auth/v1;authv1";

import "google/protobuf/timestamp.proto";

// UserService는 사용자 관리 기능을 제공하는 gRPC 서비스입니다.
// 사용자 생성, 조회, 수정, 삭제 등의 CRUD 작업을 처리합니다.
service UserService {
  // CreateUser는 새로운 사용자를 생성합니다.
  rpc CreateUser(CreateUserRequest) returns (UserResponse) {}

  // GetUserByID는 사용자 ID로 사용자 정보를 조회합니다.
  rpc GetUserByID(GetUserByIDRequest) returns (UserResponse) {}

  // GetUserByUsername은 사용자명으로 사용자 정보를 조회합니다.
  rpc GetUserByUsername(GetUserByUsernameRequest) returns (UserResponse) {}

  // UpdateUser는 사용자 정보를 수정합니다.
  rpc UpdateUser(UpdateUserRequest) returns (UserResponse) {}

  // DeleteUser는 사용자 ID로 사용자를 삭제합니다.
  rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse) {}
}

// CreateUserRequest는 사용자 생성 요청 메시지입니다.
message CreateUserRequest {
  string username = 1; // 사용자명 (필수)
  string email = 2;    // 이메일 (필수)
  string password = 3; // 비밀번호 (필수)
}

// UserResponse는 사용자 정보 응답 메시지입니다.
message UserResponse {
  User user = 1; // 조회 또는 생성된 사용자 정보
}

// User는 사용자 엔티티를 표현하는 메시지입니다.
message User {
  string id = 1;                    // 사용자 ID (UUID)
  string username = 2;              // 사용자명
  string email = 3;                 // 이메일
  string status = 4;                // 계정 상태 (ACTIVE, SUSPENDED 등)
  string subscription_tier = 5;     // 구독 등급 (FREE, PREMIUM 등)
  google.protobuf.Timestamp created_at = 6;  // 생성 시각
  google.protobuf.Timestamp updated_at = 7;  // 수정 시각
  google.protobuf.Timestamp last_login_at = 8; // 마지막 로그인 시각
  repeated string roles = 9;        // 사용자 역할 목록
}

// GetUserByIDRequest는 ID 기반 사용자 조회 요청 메시지입니다.
message GetUserByIDRequest {
  string user_id = 1; // 조회할 사용자 ID (필수)
}

// GetUserByUsernameRequest는 사용자명 기반 사용자 조회 요청 메시지입니다.
message GetUserByUsernameRequest {
  string username = 1; // 조회할 사용자명 (필수)
}

// UpdateUserRequest는 사용자 수정 요청 메시지입니다.
message UpdateUserRequest {
  string user_id = 1;           // 수정할 사용자 ID (필수)
  string email = 2;             // 새 이메일 (선택)
  string password = 3;          // 새 비밀번호 (선택)
  string status = 4;            // 새 상태 (선택)
  repeated string roles = 5;    // 새 역할 목록 (선택, 전체 덮어쓰기)
}

// DeleteUserRequest는 사용자 삭제 요청 메시지입니다.
message DeleteUserRequest {
  string user_id = 1; // 삭제할 사용자 ID (필수)
}

// DeleteUserResponse는 사용자 삭제 응답 메시지입니다.
message DeleteUserResponse {
  bool success = 1; // 삭제 성공 여부
}